--- a/style.css
+++ b/style.css
@@ -11,33 +11,30 @@ h1 {
   color: #373fff;
 }
 
-._text
-{
-    
-    position:relative;
-    text-align:center;
-    font-size:14px;
-    color:#FF0000;
-    z-index:1;
-  
+._text {
+  position: relative;
+  text-align: center;
+  font-size: 14px;
+  color: #FF0000;
+  z-index: 1;
 }
 
-
 img {
-
-left: calc(50% - 350px/2);
-top: 125px;
+  left: calc(50% - 350px / 2);
+  top: 125px;
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 30%;  
-z-index:1;
-  
-background: url(logo.jpg);
+  width: 30%;
+  z-index: 1;
+
+  background: url(logo.jpg);
 }
 
-
-h2, h3, h4, p {
+h2,
+h3,
+h4,
+p {
   text-align: center;
 }
 
@@ -47,9 +44,8 @@ div {
 }
 
 iframe {
-    display: block;
+  display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 30%;  
+  width: 30%;
 }
-
